tests/macros/unknown/option.rs
fn main() {
    let q = inquisition::questions![input { unknown: 0 }];
}
